[package]
name = "helios-mqtt"
description = "MQTT protocol adapters for Helios"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-host-metrics.workspace = true
helios-store.workspace = true
helios-state.workspace = true
helios-util.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "process"] }
tracing.workspace = true
url.workspace = true
rumqttc.workspace = true

[dev-dependencies]
bytes = "1"
tempfile.workspace = true
